SEM2/COD7001/LABS/LAB6/cstn6/src/master_tests/invalid/bad_6.lang
var x = 6 var y = 10;